add service to web-scrape recipes using AngleSharp

--- a/Services/MyRecipes.Services/MyRecipes.Services.csproj
+++ b/Services/MyRecipes.Services/MyRecipes.Services.csproj
@@ -13,9 +13,15 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AngleSharp" Version="0.17.1" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.435" PrivateAssets="all">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Data\MyRecipes.Data.Common\MyRecipes.Data.Common.csproj" />
+    <ProjectReference Include="..\..\Data\MyRecipes.Data.Models\MyRecipes.Data.Models.csproj" />
   </ItemGroup>
 
 </Project>
