implement email sender using SendGrid

--- a/Web/MyRecipes.Web/appsettings.json
+++ b/Web/MyRecipes.Web/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=.;Database=MyRecipes;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+  "SendGrid": {
+    "ApiKey": "Set valid API key in appsettings.Production.json"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
