--- a/.gitattributes
+++ b/.gitattributes
@@ -2,7 +2,7 @@
 # Set default behavior to automatically normalize line endings.
 ###############################################################################
 * text=auto
-
+Web/MyRecipes.Web/wwwroot/lib/fontawesome/css/* linguist-vendored
 ###############################################################################
 # Set default behavior for command prompt diff.
 #
